@@ -1,3 +1,9 @@
+2008-05-06  Aaron Bockover  <abock@gnome.org>
+
+	* src/Extensions/Banshee.Daap/Banshee.Daap/DaapSource.cs:
+	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting/PodcastCore.cs:
+	Build fixes
+
 2008-05-06  Gabriel Burt  <gabriel.burt@gmail.com>
 
 	* src/Extensions/Banshee.NotificationArea/Banshee.NotificationArea/NotificationAreaService.cs:
